# geotranslation-examples

c/: .gitignore  CMakeLists.txt  README.md  example.c  geotranslation.h  haversine.c  translate2d.c  translate3d.c  translateFns.c
c#/: Main.cs  example.csproj  example.sln
java/: CMakeLists.txt  Geotranslation.java  Haversine.java  LatLong.java  Makefile  Translate2d.java  Translate3d.java  example.java  haversine-manifest.txt  translate2d-manifest.txt  translate3d-manifest.txt
javascript/: README.md  example.js
